--- a/src/content/docs/current/Reference/Miscellaneous/item_properties.mdx
+++ b/src/content/docs/current/Reference/Miscellaneous/item_properties.mdx
@@ -25,5 +25,5 @@ Armor trim can be assigned with `trim_<material>`, for example `trim_emerald`.
 ### Reading IDs
 
 The ID can be read in two different ways for different contexts.
-- [`heldItemId`](/reference/uniforms/id#helditemid)/[`heldItemId2`](/reference/uniforms/id#helditemid2) for the currently held item, accessible anywhere.
-- [`currentRenderedItemId`](/reference/uniforms/id#currentrendereditemid) for the currently rendering item/armor/trim (including item frames, armor stands, players, etc), accessible in [gbuffers](/reference/programs/gbuffers) and [shadow](/reference/programs/shadow) shaders.
+- [`heldItemId`](/current/reference/uniforms/id#helditemid)/[`heldItemId2`](/current/reference/uniforms/id#helditemid2) for the currently held item, accessible anywhere.
+- [`currentRenderedItemId`](/current/reference/uniforms/id#currentrendereditemid) for the currently rendering item/armor/trim (including item frames, armor stands, players, etc), accessible in [gbuffers](/current/reference/programs/gbuffers) and [shadow](/current/reference/programs/shadow) shaders.
