--- a/src/content/docs/current/Reference/Shaders.Properties/flags.mdx
+++ b/src/content/docs/current/Reference/Shaders.Properties/flags.mdx
@@ -33,14 +33,14 @@ The following is an index of all supported feature flags. Any feature flag marke
 
 | Feature Flag                                   | Required For Use | Description                                                                                                  |
 | ---------------------------------------------- | :--------------: | ------------------------------------------------------------------------------------------------------------ |
-| `BLOCK_EMISSION_ATTRIBUTE`                     | ❌                | Queries support for the [block emission attribute](/reference/attributes/at_midblock) (`at_midBlock.w`)      |
-| `CAN_DISABLE_WEATHER`                          | ❌                | Queries support for the [`weather`](/reference/shadersproperties/features#weather) directive                 |
+| `BLOCK_EMISSION_ATTRIBUTE`                     | ❌                | Queries support for the [block emission attribute](/current/reference/attributes/at_midblock) (`at_midBlock.w`)      |
+| `CAN_DISABLE_WEATHER`                          | ❌                | Queries support for the [`weather`](/current/reference/shadersproperties/features#weather) directive                 |
 | `COMPUTE_SHADERS`                              | ❌                | Queries support for compute shaders                                                                          |
-| `CUSTOM_IMAGES`                                | ✔️                | Enables [custom images](/reference/buffers/custom_images)                                                    |
-| `ENTITY_TRANSLUCENT`                           | ❌                | Queries support for [`gbuffers_entities_translucent`](/reference/programs/gbuffers#iris-additional-programs) |
-| `HIGHER_SHADOWCOLOR`                           | ✔️                | Enables [additional shadowcolor](/reference/buffers/shadowcolor#extended-shadowcolor) buffers                |
+| `CUSTOM_IMAGES`                                | ✔️                | Enables [custom images](/current/reference/buffers/custom_images)                                                    |
+| `ENTITY_TRANSLUCENT`                           | ❌                | Queries support for [`gbuffers_entities_translucent`](/current/reference/programs/gbuffers#iris-additional-programs) |
+| `HIGHER_SHADOWCOLOR`                           | ✔️                | Enables [additional shadowcolor](/current/reference/buffers/shadowcolor#extended-shadowcolor) buffers                |
 | `PER_BUFFER_BLENDING`                          | ❌                | Queries hardware support for per-buffer blending                                                             |
-| `REVERSED_CULLING`                             | ❌                | Queries support for [Reverse Shadow Culling](/reference/constants/voxeldistance)                             |
-| `SEPARATE_HARDWARE_SAMPLERS`                   | ✔️                | Enables [Separate Hardware Shadow Samplers](/reference/buffers/shadowtex#hardware-sampling)                  |
-| `SSBO`                                         | ✔️                | Enables [SSBOs](/reference/buffers/ssbo)                                                                     |
+| `REVERSED_CULLING`                             | ❌                | Queries support for [Reverse Shadow Culling](/current/reference/constants/voxeldistance)                             |
+| `SEPARATE_HARDWARE_SAMPLERS`                   | ✔️                | Enables [Separate Hardware Shadow Samplers](/current/reference/buffers/shadowtex#hardware-sampling)                  |
+| `SSBO`                                         | ✔️                | Enables [SSBOs](/current/reference/buffers/ssbo)                                                                     |
 | `TESSELATION_SHADERS` / `TESSELLATION_SHADERS` | ✔️                | Enables tesselation shaders                                                                                  |
