fix: incorrect image referance

--- a/src/content/docs/current/Guides/Your First Shader/3_composite_lighting.mdx
+++ b/src/content/docs/current/Guides/Your First Shader/3_composite_lighting.mdx
@@ -56,7 +56,7 @@ You can see that where there is skylight, only the green component is set. Howev
 ```glsl
 color.rgb = normal;
 ```
-![](../../../../assets/beginner_tutorial/normals.webp)
+![](../../../../../assets/beginner_tutorial/normals.webp)
 Yep, that looks pretty *normal*. You'll notice that the sky is black here. This is because the `gbuffers_terrain` program does not run for the sky, so no data is stored for these pixels. We will resolve this later on.
 
 ## Lighting
